; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_do_set_user_info.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_do_set_user_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_hints_set_user_info = type { i32 }

@LEV_HINTS_SET_USER_INFO = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_set_user_info(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.lev_hints_set_user_info*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp sgt i32 %7, 13
  br i1 %8, label %15, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = icmp slt i32 %10, -2
  br i1 %11, label %15, label %12

12:                                               ; preds = %9
  %13 = load i32, i32* %5, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %12, %9, %2
  store i32 0, i32* %3, align 4
  br label %29

16:                                               ; preds = %12
  %17 = load i64, i64* @LEV_HINTS_SET_USER_INFO, align 8
  %18 = load i32, i32* %5, align 4
  %19 = sext i32 %18 to i64
  %20 = add nsw i64 %17, %19
  %21 = add nsw i64 %20, 2
  %22 = load i32, i32* %4, align 4
  %23 = call %struct.lev_hints_set_user_info* @alloc_log_event(i64 %21, i32 4, i32 %22)
  store %struct.lev_hints_set_user_info* %23, %struct.lev_hints_set_user_info** %6, align 8
  %24 = load i32, i32* %4, align 4
  %25 = load %struct.lev_hints_set_user_info*, %struct.lev_hints_set_user_info** %6, align 8
  %26 = getelementptr inbounds %struct.lev_hints_set_user_info, %struct.lev_hints_set_user_info* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  %27 = load %struct.lev_hints_set_user_info*, %struct.lev_hints_set_user_info** %6, align 8
  %28 = call i32 @set_user_info(%struct.lev_hints_set_user_info* %27)
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %16, %15
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local %struct.lev_hints_set_user_info* @alloc_log_event(i64, i32, i32) #1

declare dso_local i32 @set_user_info(%struct.lev_hints_set_user_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
